--- a/PcatProject/package.json
+++ b/PcatProject/package.json
@@ -4,12 +4,17 @@
   "description": "Pcat Photo App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "Ayse Aleyna Yavuz",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "prettier": "2.8.8"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
