--- a/PcatProject/package.json
+++ b/PcatProject/package.json
@@ -2,7 +2,7 @@
   "name": "pcatproject",
   "version": "1.0.0",
   "description": "Pcat Photo App",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^7.2.1"
   }
 }
